# aoc-2k23

./: CMakeLists.txt  README.md  main.cpp
Day01/: SolveDay1.cpp  SolveDay1.h
Day02/: SolveDay2.cpp  SolveDay2.h
Day03/: SolveDay03.cpp  SolveDay03.h
Day04/: SolveDay04.cpp  SolveDay04.h
Day05/: SolveDay05.cpp  SolveDay05.h
Day06/: SolveDay06.cpp  SolveDay06.h
Day07/: SolveDay07.cpp  SolveDay07.h
Day08/: SolveDay08.cpp  SolveDay08.h
Day09/: SolveDay09.cpp  SolveDay09.h
SolveUtils/: CMakeLists.txt  InputReader.cpp  InputReader.h  UtilFunctions.cpp  UtilFunctions.h
